--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,15 +1,48 @@
 body {
-  background-color: black;
   margin: 0;
-
+  font-family: Arial, sans-serif;
+  scroll-behavior: smooth;
+  background-color: black;
 }
 
-.profile-card {
-color: white;
-  padding: 2rem;
-  margin-top: 60px;
-  display:grid;
-  place-items: center;
-  overflow: hidden;
-
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 20px;
+  background: rgb(0, 0, 0);
+  color: #fff;
+  z-index: 1000;
+  font-size: 20px;
 }
+
+.navbar ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 1rem;
+  justify-content: center;
+  gap: 5rem;
+}
+
+.navbar li {
+  cursor: pointer;
+}
+
+.navbar li.active {
+  border-bottom: 2px solid yellow;
+}
+
+.section {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  color: white;
+}
+
+/* #home { background: lightcoral; }
+#about { background: lightblue; }
+#projects { background: lightgreen; }
+#contact { background: lightgoldenrodyellow; } */
