--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -9,11 +9,12 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  padding: 20px;
-  background: rgb(0, 0, 0);
+  padding: 10px;
+  background: black;
   color: #fff;
   z-index: 1000;
   font-size: 20px;
+
 }
 
 .navbar ul {
@@ -22,7 +23,7 @@ body {
   margin: 0;
   padding: 1rem;
   justify-content: center;
-  gap: 5rem;
+  gap: 3rem;
 }
 
 .navbar li {
@@ -42,7 +43,22 @@ body {
   color: white;
 }
 
-/* #home { background: lightcoral; }
-#about { background: lightblue; }
+.homeContent{
+  background-color: red;
+  display: contents;
+  
+  position: relative;
+  padding: 0px
+}
+
+/* .content p{
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+} */
+
+/* #home { background: lightcoral; } */
+/* #about { background: lightblue; }
 #projects { background: lightgreen; }
 #contact { background: lightgoldenrodyellow; } */
