--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -116,6 +116,8 @@ contact-section {
   text-align: left;
   margin-bottom: 6px;
   font-size: 14px;
+  font-weight: 700;
+  color: rgb(203, 195, 195);
 }
 
 .contact-form input,
