--- a/src/blocks/Components/ProfileCard/ProfileCard.css
+++ b/src/blocks/Components/ProfileCard/ProfileCard.css
@@ -81,7 +81,7 @@
 }
 
 .pc-card * {
-  /* display: grid; */
+  display: grid;
   grid-area: 1/-1;
   border-radius: var(--card-radius);
   transform: translate3d(0, 0, 0.1px);
@@ -297,6 +297,7 @@
   overflow: hidden;
   border: 1px solid rgba(255, 255, 255, 0.1);
   flex-shrink: 0;
+  
 }
 
 .pc-mini-avatar img {
@@ -311,6 +312,7 @@
   align-items: flex-start;
   flex-direction: column;
   gap: 6px;
+  
  
 }
 
@@ -357,7 +359,6 @@
     0.1px
   ) !important;
   z-index: 5;
-  mix-blend-mode: luminosity;
 }
 
 .pc-details {
@@ -373,7 +374,7 @@
   margin: 0;
   font-size: min(5svh, 3em);
   margin: 0;
-  background-image: linear-gradient(to bottom, #fff, #6f6fbe);
+  background-image: linear-gradient(to bottom, #fff, #1a1a28);
   background-size: 1em 1.5em;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -382,13 +383,14 @@
 
 .pc-details p {
   font-weight: 600;
+  
   position: relative;
-  top: -12px;
+  top: 0px;
   white-space: nowrap;
   font-size: 16px;
   margin: 0 auto;
   width: min-content;
-  background-image: linear-gradient(to bottom, #fff, #4a4ac0);
+  background-image: linear-gradient(to bottom, #fff,#1a1a28);
   background-size: 1em 1.5em;
   -webkit-text-fill-color: transparent;
   background-clip: text;
